# Sepanta3

./: .gitignore  LICENSE  README.md  RUN  ReadMe  bash  dependencies.txt  dependencies.txt~
DCM/: calib_pose.yaml
DCM/VR/: CMakeLists.txt  package.xml
DCM/VR/include/: base64.cpp
DCM/VR/src/: simserver.cpp  simserverclient.cpp
DCM/dynamixel/: init.txt~
DCM/kinect2/: CMakeLists.txt  CMakeLists.txt~  CMakeListso.txt  package.xml  package.xml~
DCM/kinect2/data/: calib_color.yaml  calib_ir.yaml  kinect2_params.yml
DCM/kinect2/include/: k2_client.h
DCM/kinect2/launch/: kinect2Client.launch  kinect2Client.launch~
DCM/kinect2/src/: depth_registration.cpp  fetch_kinect_params.cpp  startAudio.cpp  startBody.cpp  startDepth.cpp  startIR.cpp  startRGB.cpp
DCM/lowerbody/: CMakeLists.txt  package.xml  package.xml~
DCM/lowerbodycore/: CMakeLists.txt  CMakeLists.txt~  package.xml
DCM/lowerbodycore/launch/: core.launch  core.launch~  core2.launch  hector_slamrec.launch~  joy.launch  laser.launch
DCM/lowerbodycore/src/: .kdev_include_paths  core.cpp  core.cpp.autosave  lowerbodycore.cpp  remotecontrol.cpp
DCM/tcpip/: CMakeLists.txt  package.xml
DCM/tcpip/src/: client_tcp.cpp  client_tcp.h  communication.cpp  tcp.cpp  tcpclient.cpp  tcpserver.cpp
DCM/upperbodycore/: CMakeLists.txt  motor.launch  package.xml  pid.yml
DCM/upperbodycore/include/ik/: linspace.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h  simple_IK.h  simple_IK_initialize.h  simple_IK_terminate.h  simple_IK_types.h  traj_IK.h  traj_IK_emxAPI.h  traj_IK_emxutil.h  traj_IK_initialize.h  traj_IK_terminate.h  traj_IK_types.h
DCM/upperbodycore/include/upperbody_core/: sepanta_ik.h
DCM/upperbodycore/launch/: motor.launch  motor.launch~
DCM/upperbodycore/shell/: alldevices.sh  kinect.sh  kinectkill.sh
DCM/upperbodycore/src/: athomerobot.cpp~  client_ik.cpp  dummy.cpp  ik_node.cpp  ikfk.cpp  ikfk_new.cpp  ikfko.cpp  movement.cpp  oldsample.cpp  sample_armtest.cpp  sample_lastgood.cpp  sample_old.cpp  sampleo.cpp  sampleold.cpp  samplev1.cpp  sepanta_ik.cpp  upperbodyclient.cpp  upperbodyclient.h  upperbodycore.cpp  upperbodycorefunctions.h
DCM/upperbodycore/src/ik/: linspace.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  simple_IK.cpp  simple_IK_initialize.cpp  simple_IK_terminate.cpp  traj_IK.cpp  traj_IK_emxAPI.cpp  traj_IK_emxutil.cpp  traj_IK_initialize.cpp  traj_IK_terminate.cpp
GUI/: CMakeLists.txt  package.xml  plugin.xml  setup.py
GUI/include/rqt_camera_calib_gui/: CameraCalibView.h  ratio_layouted_frame.h
GUI/resources/: camera_calib_view.ui
GUI/scripts/: rqt_camera_calib_gui
GUI/sepanta_android/sepanta/: sepanta.sln
GUI/sepanta_android/sepanta/sepanta/: MainActivity.cs  client.cs  sepanta.csproj  statics.cs
GUI/sepanta_android/sepanta/sepanta/Properties/: AndroidManifest.xml  AssemblyInfo.cs
GUI/sepanta_android/sepanta/sepanta/Resources/: Resource.Designer.cs
GUI/sepanta_android/sepanta/sepanta/Resources/layout/: Main.axml
GUI/sepanta_android/sepanta/sepanta/Resources/values/: Strings.xml
GUI/sepanta_gui/main/: main.sln
GUI/sepanta_gui/main/main/: MapTool.cs  PGM.cs  Program.cs  Statics.cs  client.cs  frmMain.Designer.cs  frmMain.cs  frmMain.resx  frmNaigation.Designer.cs  frmNaigation.cs  frmpoint.Designer.cs  main.csproj
GUI/sepanta_gui/main/main/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
GUI/sepanta_gui/sepanta_gui/main/main/: MapTool.cs  Statics.cs  frmpoint.cs
GUI/src/rqt_camera_calib_gui/: CameraCalibView.cpp  ratio_layouted_frame.cpp
Managment/: CMakeLists.txt
Managment/launch/: amcl.launch  basicfuntion_nodes.launch  hector_calib.launch  hector_slam.launch  hector_slamrec.launch  hector_virtual.launch  hector_virtual_main.launch  kinectConvert.launch  move_base.launch
Managment/logs/: 7.txt
Managment/maps/: map (another copy).pgm  map.pgm  map.yaml  map2.pgm  mapt.pgm  points.txt
Managment/maps (copy)/: map.yaml
Managment/param/: base_local_planner_params.yaml  (+3 more)
Navigation/Odometry/SepantaBase/: CMakeLists.txt  odometry.cpp  package.xml  package.xml~
Navigation/Odometry/SepantaBase/src/: client_odometry.cpp  cmd_watchdog.cpp  odometry.cpp
Navigation/SepantaMoveBase/: CMakeLists.txt
Navigation/SepantaMoveBase/files/: lastPosition.txt
Navigation/SepantaMoveBase/include/: sepantamovebase.h
Navigation/SepantaMoveBase/src/: client_movebase.cpp  sepantamovebase (copy).cpp  sepantamovebase.cpp  sepantamovebase2.cpp
SMACH/sepantascenario/: CMakeLists.txt  package.xml
SMACH/sepantascenario/src/: scenario1 (copy).cpp  scenario1.cpp  stage1_navigation.cpp  stage_base.cpp
Speech/Sound/: CMakeLists.txt  package.xml  supported format
Speech/Sound/include/: client_rampStairDetection.h~
Speech/Sound/src/: client_sound.cpp  client_sound.h  client_sound.h~  clinet_sound.h~  core_sound.cpp  sampleLogRead.cpp  sample_sound.cpp  soundclient.cpp  soundclient.h  soundclient.h~
Vision/ObjectRecognition/: CMakeLists.txt  package.xml
Vision/ObjectRecognition/include/: image_conversions.hpp  object.hpp  object_pipeline.hpp  object_recognition.hpp  object_recognition_action_server.hpp  parameters.hpp  train_objects.hpp
Vision/ObjectRecognition/src/: image_conversions.cpp  object.cpp  object_pipeline.cpp  object_recognition.cpp  object_recognition_action_server.cpp  object_recognition_action_server_main.cpp  object_recognition_main.cpp  train_objects.cpp  train_objects_main.cpp  visualize_objects.cpp
actiondemo/: CMakeLists.txt  package.xml
follow/sepantafollowengine/: CMakeLists.txt  package.xml
follow/sepantafollowengine/files/: lastPosition.txt
follow/sepantafollowengine/include/: SepantaFollow.h
follow/sepantafollowengine/src/: sepantafollowengine.cpp
ros_open_tld-master/: README.md  package.xml
sepanta_msgs/: CMakeLists.txt
sepanta_msgs/action/: Master.action
sepanta_msgs/msg/: Object.msg  all_rectangle.msg  irsensor.msg  objectpos.msg  objectrectangle.msg  objectsposition.msg  upperbodymotors.msg  users.msg
sepanta_msgs/srv/: command.srv
(+164 files in other folders)
