<?xml version="1.0"?>
<package>
  <name>upperbodycore</name>
  <version>0.0.1</version>
  <description>UpperBody Core Interface</description>

  <maintainer email="edwin.babaians@gmail.com">x</maintainer>

  <license>TODO</license>

  <url type="website">http://ac.ir</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>sepanta_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend> 
  <run_depend>dynamixel_msgs</run_depend> 
  <run_depend>sepanta_msgs</run_depend> 
  
</package>
